# pyeq3

./: .gitignore  CHANGELOG  CONTRIBUTING.md  IModel.py  PKG-INFO  README.md  README.txt  Readme.md  changelog.txt  license.txt  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
ExtendedVersionHandlers/: ExtendedVersionHandler_Inverse.py  ExtendedVersionHandler_InverseWithOffset.py  ExtendedVersionHandler_LinearDecay.py  ExtendedVersionHandler_LinearDecayAndOffset.py  ExtendedVersionHandler_LinearGrowth.py  ExtendedVersionHandler_LinearGrowthAndOffset.py  ExtendedVersionHandler_PlusLine.py  IExtendedVersionHandler.py  __init__.py
Models_2D/: BioScience.py  BurkardtCollectionBased.py  Engineering.py  Exponential.py  LegendrePolynomial.py  Logarithmic.py  Miscellaneous.py  NIST.py  Optical.py  Peak.py  Polynomial.py  Power.py  Rational.py  Sigmoidal.py  Simple.py  Trigonometric.py  UserDefinedFunction.py
Models_3D/: BioScience.py  EnzymeKinetics.py  Exponential.py  NIST.py  Polyfunctional.py  Polynomial.py  Power.py  RomanSurfaces.py  Sigmoidal.py  Simple.py  Trigonometric.py  UserDefinedFunction.py
Services/: DataConverterService.py  SolverService.py
UnitTests/: NIST_TestingUtilities.py  Test_DataCache.py  Test_DataConverterService.py  Test_Equations.py  Test_IndividualPolyFunctions.py  Test_ModelSolveMethods.py  Test_SolverService.py
docs/: Makefile  conf.py  index.rst  index_pdf.rst  introduction.rst  model_list.rst  pip_requirements.txt
examples/: fit_all_equations_in_parallel.py  fit_all_functions.py  fit_custom_functions.py
(+208 files in other folders)
