[tool.poetry]
name = "pyeq3"
version = "12.6.2a0"
description = "An equation, curve and surface fitting library"
readme = "README.md"
readme-content-type = "text/x-rst"
authors = ["James Phillips, Robert Myhill <bob.myhill@bristol.ac.uk>"]
homepage = "https://github.com/equations-project/pyeq3"
license = "BSD"
keywords = ["curve", "surface", "fitting"]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24"
scipy = "^1.10"
matplotlib = "^3.7"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
